--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -26,7 +26,7 @@
     }
   </div>
 
-  <div class="form-row">
+  <div class="form-row d-none">
     <div class="mb-3 col">
       <label for="lat">Latitude:</label>
       <input type="text" class="form-control" id="lat" formControlName="lat" placeholder="Geolocating..." readonly />
@@ -39,4 +39,7 @@
 
   <p class="text-danger"></p>
   <button type="submit" class="btn btn-primary">Login</button>
+  <div>
+    <google-login class="btn" (login)="loggedGoogle($event)"></google-login>
+  </div>
 </form>
