--- a/src/app/events/event-card/event-card.component.html
+++ b/src/app/events/event-card/event-card.component.html
@@ -1,23 +1,64 @@
-<div class="card shadow">
-  <a [routerLink]="['/events', event().id]">
-    <img class="card-img-top" [src]="event().image" alt="" />
-  </a>
-
-  <div class="card-body">
-    <h4 class="card-title">
-      <a [routerLink]="['/events', event().id]">
-        {{ event().title }}
+<div class="col">
+  <div class="card h-100 shadow">
+    <a [routerLink]="['/events', event().id]">
+      <img class="card-img-top" [src]="event().image" alt="image" />
+    </a>
+    <div class="card-body">
+      <a class="text-decoration-none" [routerLink]="['/events', event().id]">
+        <h4 class="card-title">{{ event().title }}</h4>
       </a>
-    </h4>
-    <p class="card-text">{{ event().description }}</p>
-    <button class="btn btn-danger delete" (click)="deleteEvent()">
-      <i class="bi bi-trash"></i>
-    </button>
-  </div>
-  <div class="card-footer text-muted row m-0">
-    <div class="col">{{ event().date | date : "dd/MM/yyyy" }}</div>
-    <div class="col text-end">
-      {{ event().price | intlCurrency : "EUR" : "es-ES" }}
+      <p class="card-text">{{ event().description }}</p>
+      <div class="row">
+        @if (event().mine) {
+        <div class="col">
+          <button class="btn btn-danger delete" (confirm)="deleteEvent()">
+            <i class="bi bi-trash"></i>
+          </button>
+        </div>
+        }
+        <div class="col-auto ms-auto">
+          <div class="text-end attend-users">
+            <i class="bi bi-people-fill"></i> {{ event().numAttend }}
+          </div>
+          <div
+            class="text-success text-end m-0 attend-button"
+            [class]="{
+              'bi-hand-thumbs-up-fill': event().attend,
+              'bi-hand-thumbs-down-fill': !event().attend
+            }"
+            (click)="attendEvent()"
+            tabindex="0"
+            (keydown.enter)="attendEvent()"
+          >
+            {{ event().attend ? "Im going" : "Not going" }}
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card-footer text-muted row m-0">
+      <div class="col-auto avatar pl-1 pr-1">
+        <a href="">
+          <img
+            [src]="event().creator.avatar"
+            class="rounded-circle"
+            [alt]="event().creator.name"
+          />
+        </a>
+      </div>
+      <div class="col">
+        <div class="name">
+          <a href="">{{ event().creator.name }}</a>
+        </div>
+        <div class="date small text-muted">
+          {{ event().date | date : "dd/MM/yyyy" }}
+        </div>
+      </div>
+      <div class="col-auto text-end text-muted">
+        <div class="price small">
+          {{ event().price | intlCurrency : "EUR" : "es-ES" }}
+        </div>
+        <div class="distance small">{{ event().distance }}</div>
+      </div>
     </div>
   </div>
 </div>
