--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -40,6 +40,6 @@
   <p class="text-danger"></p>
   <button type="submit" class="btn btn-primary">Login</button>
   <div>
-    <google-login class="btn" (login)="loggedGoogle($event)"></google-login>
+    <google-login class="btn" (login)="googleUserLogin($event)"></google-login>
   </div>
 </form>
