--- a/src/app/events/events-page/events-page.component.html
+++ b/src/app/events/events-page/events-page.component.html
@@ -7,15 +7,20 @@
       <li class="nav-item">
         <button class="nav-link" (click)="orderPrice()">Order by price</button>
       </li>
+      <li class="nav-item filter-text">
+        <p class="text-muted mt-2">{{ filterDescription() }}</p>
+      </li>
     </ul>
+
     <form class="d-flex mb-0">
       <input
+        [formControl]="searchControl"
         class="form-control me-2"
         type="text"
         name="search"
+        id="search"
         placeholder="Search"
         aria-label="Search"
-        [(ngModel)]="search"
       />
     </form>
   </div>
@@ -26,3 +31,12 @@
   <event-card class="col" [event]="event" (deleted)="deleteEvent(event)" />
   }
 </div>
+
+
+<button
+  class="btn btn-primary d-block mx-auto"
+  (click)="loadMore()"
+  [disabled]="!eventsLeft()"
+>
+  Load More
+</button>
