--- a/src/app/shared/top-menu/top-menu.component.html
+++ b/src/app/shared/top-menu/top-menu.component.html
@@ -14,6 +14,11 @@
           New event
         </a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/profile']" [routerLinkActive]="['active']">
+          Profile
+        </a>
+      </li>
       }
     </ul>
     <ul class="navbar-nav">
