Full profile implementation (almost done)

--- a/src/app/events/events-page/events-page.component.html
+++ b/src/app/events/events-page/events-page.component.html
@@ -2,6 +2,9 @@
   <div class="container-fluid">
     <ul class="nav">
       <li class="nav-item">
+        <button class="nav-link" (click)="orderDistance()">Order by price</button>
+      </li>
+      <li class="nav-item">
         <button class="nav-link" (click)="orderDate()">Order by date</button>
       </li>
       <li class="nav-item">
