--- a/src/app/events/event-detail/event-detail.component.html
+++ b/src/app/events/event-detail/event-detail.component.html
@@ -9,14 +9,14 @@
 <div class="card mt-4">
   <div class="card-header" id="address">{{ event().address }}</div>
   <ol-map [coordinates]="coordinates()">
-    <ol-marker [coordinates]="[event().lat, event().lng]"></ol-marker>
-  </ol-map>
+    <ol-marker [coordinates]="coordinates()"></ol-marker>
+  </ol-map>  
 </div>
 
 @if(attendees()) {
 <div class="card mt-4 mb-4">
   <div class="card-header bg-success text-white" id="address">
-    Attendees to the event
+    People attending to the event
   </div>
   <ul class="list-group" id="userList">
     @for (user of attendees(); track user.id) {
@@ -70,7 +70,7 @@
 
 @if (comments()) {
 <div class="card mt-4 mb-4">
-  <div class="card-header bg-info text-white" id="address">User comments</div>
+  <div class="card-header bg-info text-white" id="address">Comment section</div>
   <ul class="list-group" id="userComments">
     @for (comment of comments(); track comment.id) {
     <li class="list-group-item">
