--- a/src/app/shared/top-menu/top-menu.component.html
+++ b/src/app/shared/top-menu/top-menu.component.html
@@ -16,7 +16,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['/profile']" [routerLinkActive]="['active']">
-          Profile
+          My Profile
         </a>
       </li>
       }
