--- a/src/app/events/events-page/events-page.component.html
+++ b/src/app/events/events-page/events-page.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <ul class="nav">
       <li class="nav-item">
-        <button class="nav-link" (click)="orderDistance()">Order by price</button>
+        <button class="nav-link" (click)="orderDistance()">Order by distance</button>
       </li>
       <li class="nav-item">
         <button class="nav-link" (click)="orderDate()">Order by date</button>
