--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -37,7 +37,7 @@
     }
   </div>
 
-  @if (registerForm.get('emailGroup')?.errors?.['matchEmail']) {
+  @if (registerForm.errors?.['matchEmail']) {
   <div class="invalid-feedback">Emails must match!</div>
   }
 
