--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,3 +1,8 @@
+@if(errors() === 400) {
+  <div class="alert alert-danger">Email is already registered</div>
+}
+
+
 <form class="mt-4" method="POST" [formGroup]="registerForm" (ngSubmit)="addUser()">
   <legend>Create an account</legend>
 
@@ -79,5 +84,5 @@
 
   <p class="text-danger" id="errorInfo"></p>
   <a class="btn btn-secondary" href="login.html" role="button">Go back</a>
-  <button type="submit" class="btn btn-primary">Create account</button>
+  <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid">Create account</button>
 </form>
