--- a/src/app/events/events-page/events-page.component.html
+++ b/src/app/events/events-page/events-page.component.html
@@ -37,11 +37,9 @@
   }
 </div>
 
-<button
-  class="btn btn-primary d-block mx-auto"
-  (click)="loadMore()"
-  [disabled]="!eventsLeft()"
->
+@if (eventsLeft()) {
+<button class="btn btn-primary d-block mx-auto" (click)="loadMore()">
   Load More
   <i class="bi bi-plus-square"></i>
 </button>
+}
