--- a/src/app/events/events-page/events-page.component.html
+++ b/src/app/events/events-page/events-page.component.html
@@ -31,7 +31,7 @@
   </div>
 </nav>
 
-<div class="mb-4 mt-4 row row-cols-1 row-cols-md-2 row-cols-xl-3 g-4">
+<div class="mb-4 mt-4 row row-cols-1 row-cols-md-2 row-cols-xl-3 g-4" [@animateList]="events().length">
   @for(event of filteredEvents(); track event.id) {
   <event-card class="col" [event]="event" (deleted)="deleteEvent(event)" />
   }
