--- a/src/app/events/event-detail/event-detail.component.css
+++ b/src/app/events/event-detail/event-detail.component.css
@@ -15,3 +15,25 @@ ol-map{
 .comment {
   white-space: pre-wrap;
 }
+
+.page-layout {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 2rem;
+  padding: 1rem;
+}
+
+.left-column,
+.right-column {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.left-column {
+  grid-column: 1;
+}
+
+.right-column {
+  grid-column: 2;
+}
